--- a/src/_includes/layouts/base.ejs
+++ b/src/_includes/layouts/base.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cs">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -73,7 +73,7 @@
           <ul class="flex flex-wrap text-xl">
             <li class="mr-6">
               <a class="text-gray-700 border-none hover:no-underline hover:text-gray-800" href="/"
-                >Home</a
+                >Domů</a
               >
             </li>
             <li class="mr-6">
