--- a/src/_includes/layouts/post.ejs
+++ b/src/_includes/layouts/post.ejs
@@ -6,7 +6,7 @@ layout: layouts/base.ejs
   <header>
     <h1 class="text-center font-bold text-3xl text-gray-800"><%= title %></h1>
     <div class="text-center text-sm mb-8">
-      <%= this.dateFns.format(new Date(date), 'yyyy-mm-dd') %>
+      <%= this.dateFns.format(new Date(date), 'yyyy-MM-dd') %>
     </div>
   </header>
 
