--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,12 +1,12 @@
 ---
 pagination:
   data: collections.posts
-  size: 5
+  size: 10
   alias: list
   reverse: true
-permalink: '<% if (pagination.pageNumber > 0) { %><%= `page${pagination.pageNumber + 1}/index.html` %><% } else { %>index.html<% } %>'
+permalink: '<% if (pagination.pageNumber > 0) { %><%= `stranka${pagination.pageNumber + 1}/index.html` %><% } else { %>index.html<% } %>'
 eleventyComputed:
-  title: '<% if (pagination.pageNumber > 0) { %><%= `Page ${pagination.pageNumber + 1} | ${site.title}` %><% } else { %><%= site.title %><% } %>'
+  title: '<% if (pagination.pageNumber > 0) { %><%= `Stránka ${pagination.pageNumber + 1} | ${site.title}` %><% } else { %><%= site.title %><% } %>'
 ---
 
 <ul>
@@ -14,7 +14,7 @@ eleventyComputed:
   <li class="mb-3 flex justify-between">
     <a href="<%= post.url %>"><%= post.data.title %></a>
 
-    <div><%= this.dateFns.format(new Date(post.data.date), 'LLLL d, yyyy') %></div>
+    <div><%= this.dateFns.format(new Date(post.data.date), 'yyyy-MM-dd') %></div>
   </li>
   <% }) %>
 </ul>
@@ -22,11 +22,11 @@ eleventyComputed:
 <div class="text-sm flex justify-between">
   <% if (pagination.previous) { %>
   <div>
-    <a href="<%= pagination.previous.replace(/index.html$/, "") %>">← Newer Posts</a>
+    <a href="<%= pagination.previous.replace(/index.html$/, "") %>">← Novější články</a>
   </div>
   <% } %> <% if (pagination.next) { %>
   <div class="text-right ml-auto">
-    <a href="<%= pagination.next.replace(/index.html$/, "") %>">Older Posts →</a>
+    <a href="<%= pagination.next.replace(/index.html$/, "") %>">Starší články →</a>
   </div>
   <% } %>
 </div>
