--- a/src/_includes/layouts/base.ejs
+++ b/src/_includes/layouts/base.ejs
@@ -79,9 +79,9 @@
             <li class="mr-6">
               <a
                 class="text-gray-700 border-none hover:no-underline hover:text-gray-800"
-                href="https://github.com/ixartz/Eleventy-Starter-Boilerplate"
+                href="https://www.zdenek-hejl.com"
               >
-                GitHub
+                Zdeněk Hejl
               </a>
             </li>
           </ul>
