--- a/src/_includes/layouts/base.ejs
+++ b/src/_includes/layouts/base.ejs
@@ -66,9 +66,10 @@
     <div class="max-w-screen-md mx-auto">
       <div class="border-b border-gray-300">
         <div class="pt-16 pb-8">
-          <h1 class="font-semibold text-3xl text-gray-800"><%= site.title %></h1>
+          <h1 class="font-semibold text-3xl text-gray-800"><a class="text-gray-800 border-none hover:no-underline hover:text-gray-800" href="/"><%= site.title %></a></h1>
           <div class="text-xl"><%= site.description %></div>
         </div>
+        <!--
         <nav>
           <ul class="flex flex-wrap text-xl">
             <li class="mr-6">
@@ -86,6 +87,7 @@
             </li>
           </ul>
         </nav>
+        -->
       </div>
 
       <div class="text-xl py-5"><%- content %></div>
