--- a/src/_includes/layouts/base.ejs
+++ b/src/_includes/layouts/base.ejs
@@ -65,7 +65,7 @@
   <body class="antialiased w-full text-gray-700">
     <div class="max-w-screen-md mx-auto">
       <div class="border-b border-gray-300">
-        <div class="pt-16 pb-8">
+        <div class="pt-16 pb-8 text-center">
           <h1 class="font-semibold text-3xl text-gray-800"><a class="text-gray-800 border-none hover:no-underline hover:text-gray-800" href="/"><%= site.title %></a></h1>
           <div class="text-xl"><%= site.description %></div>
         </div>
