--- a/src/_includes/layouts/base.ejs
+++ b/src/_includes/layouts/base.ejs
@@ -80,8 +80,9 @@
       <div class="text-xl py-5"><%- content %></div>
 
       <div class="border-t border-gray-300 text-center py-8">
-        <h2>Oblíbené články</h2>
+        <h2 class="text-3xl">Nejčtenější články</h2>
         <a href="/filozoficke-myslenkove-britvy/">Filozofické/myšlenkové břitvy</a><br />
+        <a href="/kognitivni-zkresleni/">Kognitivní zkreslení</a>
         <a href="/otazky-pri-kritickem-mysleni/">Jaké otázky si klást při kritickém myšlení</a>
       </div>
     </div>
