--- a/src/_includes/layouts/base.ejs
+++ b/src/_includes/layouts/base.ejs
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <title><%= title %></title>
+    <title><%= title %> | <%= site_name %></title>
     <meta
       name="description"
       content="<%= (!!locals.description) ? description : site.description %>"
@@ -82,7 +82,7 @@
       <div class="border-t border-gray-300 text-center py-8">
         <h2 class="text-3xl">Nejčtenější články</h2>
         <a href="/filozoficke-myslenkove-britvy/">Filozofické/myšlenkové břitvy</a><br />
-        <a href="/kognitivni-zkresleni/">Kognitivní zkreslení</a>
+        <a href="/kognitivni-zkresleni/">Kognitivní zkreslení</a><br />
         <a href="/otazky-pri-kritickem-mysleni/">Jaké otázky si klást při kritickém myšlení</a>
       </div>
     </div>
