--- a/src/_includes/layouts/base.ejs
+++ b/src/_includes/layouts/base.ejs
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <title><%= title %> | <%= site_name %></title>
+    <title><%= title %><%if (3==3) {%> | <%= site.site_name %><%}%></title>
     <meta
       name="description"
       content="<%= (!!locals.description) ? description : site.description %>"
